# llvm-practice

./: README.md  inst2-vm.cpp
4-entry-exit/: ee  ee-gcc  ee-llvm  entry-exit.c  script.sh
InjectFuncCall/: CMakeLists.txt
InjectFuncCall/src/: CMakeLists.txt  InjectFuncCall.cpp  InjectFuncCall.h
InstFind/: CMakeLists.txt
InstFind/instFind/: CMakeLists.txt  header.h  header.h.gch  instFindPass.cpp  simple.c  test.c
InstKern/: 1-test.bc  Makefile  Makefile.ext4  Makefile.r8169  a.out  acl.ll  compilelog.txt  findvmalloc-store.md  gen.py  helper.py  impl-inst.bc  impl-inst.ll  impl-inst.ll.ll  inst0.cpp  inst1.cpp  inst2.cpp  inst3.cpp  inst4.cpp  instkern.cpp  statistic.cpp  test-inst.ll  test.ll  tmpext4.txt
InstKern/analyze-data/: clang-no-dbg.txt  clang.txt  targetaddr.cpp  targetaddr.ll  test.py
InstKern/test/: Makefile  a.out  acl-inst.bc  acl-inst.ll  acl-no-dbg.ll  header.h  impl.c  impl.ll  ketag.c  ketag.ll  test.bc  test.c  test.ll  test1.c  test1.ll  test2.ll
cmake-tutorial/hello-cmake/: CMakeLists.txt
cmake-tutorial/hello-cmake/src/: main.cpp
cmake-tutorial/third_party_include/: CMakeLists.txt
compile-ext4-clang/: process.md
ketagInst/: Makefile  inst.cpp
make-tutorial/1-basic/: Makefile
statistic/: Makefile  a.out  ext4.txt  gentest.py  getext4.sh  inst.db  ir-statistic.db  sqlitetest.cpp  statistic.cpp  storestat.cpp  test-inst.ll  test.c  test.ll
testpass/: CMakeLists.txt
testpass/test-pass/: CMakeLists.txt  header.h  pass-impl.cpp  test.bc  test.cpp  test.ll
tutorial/1-compile/: mul.s  multiply-reg.ll  multiply.bc  multiply.c  multiply.ll  multiply.s  multiply1.ll  re-multiply.ll  script.sh
tutorial/2-link/: output.bc  script.sh  test1.bc  test1.ll  test2.bc  test2.c  test2.ll
tutorial/3-clang/: a.out  report  script.sh  test.bc  test.c
tutorial/4-entry-exit/: a.c  a.out  clang-help.txt  ee-gcc  entry-exit.c  header.h  header.h.gch  script.sh
tutorial/5-pass-test/: Hello.cpp  Makefile  base  base.bc  base.c  script.sh
tutorial/6-instrumentation/: CMakeLists.txt  script.sh  test  test.bc  test.c  test.ll
tutorial/6-instrumentation/helloworld/: CMakeLists.txt  HelloWorld.cpp
